--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/runtime": "7.12.18",
+    "@popperjs/core": "^2.8.4",
     "@reduxjs/toolkit": "1.5.0",
     "bootstrap": "4.6.0",
     "jquery": "3.5.1",
@@ -27,5 +28,17 @@
   },
   "devDependencies": {
     "react-scripts": "latest"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
